pkg/lang/testdata/ub/file/factory/valid/stack.ub
description: 'a stack'
inputs: {
  region: { type: string }
}
constraints: [
  { kind: required-together, fields: [var.region] },
]
imports: {
  aws: 'github.com/x/y'
}
outputs: {
  out: { value: var.region }
}
